k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-app
  namespace: progressive-delivery
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - route:
        - destination:
            host: demo-app
            subset: primary
          weight: 100
        - destination:
            host: demo-app
            subset: canary
          weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: demo-app
  namespace: progressive-delivery
spec:
  host: demo-app
  subsets:
    - name: primary
      labels:
        version: v1
    - name: canary
      labels:
        version: v2
    - name: blue
      labels:
        version: v1
    - name: green
      labels:
        version: v2
